// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Checkbox should do a snapshot test of the checked Checkbox DOM 1`] = `
<DocumentFragment>
  <label
    class="sendbird-checkbox "
  >
    <input
      checked=""
      type="checkbox"
    />
    <span
      class="sendbird-checkbox--checkmark "
    />
  </label>
</DocumentFragment>
`;

exports[`ui/Checkbox should do a snapshot test of the default Checkbox DOM 1`] = `
<DocumentFragment>
  <label
    class="sendbird-checkbox "
  >
    <input
      type="checkbox"
    />
    <span
      class="sendbird-checkbox--checkmark "
    />
  </label>
</DocumentFragment>
`;
